@startuml
!theme plain
hide empty description

' === STATE DEFINITIONS (Matching app_state_t) ===
state STATE_INIT
state STATE_CALIB_SOIL_DRY
state STATE_CALIB_SOIL_WET
state STATE_PROVISIONING
state STATE_WIFI_CONNECT
state STATE_DECISION_WATER
state STATE_DECISION_SYNC
state STATE_SENSING
state STATE_MQTT_PUBLISH
state STATE_FLASH_STORE
state STATE_FACTORY_RESET
state STATE_IDLE
state STATE_DEEP_SLEEP

' === STARTUP ===
[*] --> STATE_INIT
STATE_INIT --> STATE_SENSING : APP_EVENT_CONFIG_LOADED
STATE_INIT --> STATE_CALIB_SOIL_DRY : APP_EVENT_NO_CONFIG

STATE_CALIB_SOIL_DRY --> STATE_CALIB_SOIL_WET : APP_EVENT_BTN2_SHORT
STATE_CALIB_SOIL_WET --> STATE_PROVISIONING : APP_EVENT_BTN2_SHORT
STATE_CALIB_SOIL_WET --> STATE_CALIB_SOIL_DRY : APP_EVENT_BTN1_SHORT

' === PROVISIONING ===
STATE_PROVISIONING --> STATE_SENSING : APP_EVENT_PROV_DATA_RECVD
STATE_PROVISIONING --> STATE_DEEP_SLEEP : APP_EVENT_PROV_TIMEOUT
STATE_PROVISIONING --> STATE_CALIB_SOIL_DRY : APP_EVENT_REQUIRES_CALIBRATION

STATE_CALIB_SOIL_DRY --> STATE_DEEP_SLEEP : APP_EVENT_CALIB_TIMEOUT
STATE_CALIB_SOIL_WET --> STATE_DEEP_SLEEP : APP_EVENT_CALIB_TIMEOUT

' === CONNECTIVITY ===
STATE_WIFI_CONNECT --> STATE_FLASH_STORE : APP_EVENT_WIFI_DISCONNECTED
STATE_WIFI_CONNECT --> STATE_MQTT_PUBLISH : APP_EVENT_WIFI_CONNECTED

' === SENSING ===
STATE_SENSING --> STATE_DECISION_WATER : APP_EVENT_SENSORS_DATA_READY

' === DECISION (WATER) ===
STATE_DECISION_WATER --> STATE_DECISION_SYNC : APP_EVENT_DECISION_WATER_DONE

' === DECISION (SYNC) ===
STATE_DECISION_SYNC --> STATE_WIFI_CONNECT : APP_EVENT_DECISION_SYNC_WIFI
STATE_DECISION_SYNC --> STATE_FLASH_STORE : APP_EVENT_DECISION_SYNC_STORAGE

STATE_MQTT_PUBLISH --> STATE_IDLE : APP_EVENT_MQTT_PUBLISHED
STATE_MQTT_PUBLISH --> STATE_FLASH_STORE : APP_EVENT_DECISION_STORAGE
STATE_MQTT_PUBLISH --> STATE_FLASH_STORE : APP_EVENT_WIFI_DISCONNECTED
STATE_FLASH_STORE --> STATE_IDLE : APP_EVENT_STORAGE_SAVED


' === WAKEUP & RESET ===
STATE_FACTORY_RESET --> STATE_INIT : APP_EVENT_FACTORY_RESET_DONE
STATE_IDLE --> STATE_DEEP_SLEEP : APP_EVENT_IDLE_TIMEOUT
STATE_DEEP_SLEEP --> STATE_INIT : APP_EVENT_BTN1_SHORT 

' === GLOBAL INTERRUPTS ===
' These transitions can happen from active states
state "Global Interrupts" as GI #white ##white {
    state "Any Active State" as ANY
    ANY --> STATE_PROVISIONING : APP_EVENT_BTN1_3S
    ANY --> STATE_FACTORY_RESET : APP_EVENT_BTN1_10S
}

@enduml
